# OnlineShop

./: .gitignore  LICENSE  README.md  db.sqlite3  log.txt  pyproject.toml  requirment.txt
apps/Buy/: admin.py  apps.py  tests.py
apps/Buy/migrations/: 0001_initial.py  0002_initial.py
apps/buy/: apps.py  models.py  tests.py
apps/core/: managers.py  models.py
apps/core/test/: LogicalDeleteTest.py  TimeStampTest.py
apps/products/: admin.py  forms.py  managers.py  models.py  permissions.py  tasks.py  tests.py
apps/products/migrations/: 0001_initial.py  0002_initial.py
apps/products/serializers/: ShowProductsSerializer.py
apps/products/urls/: ManageCoupons.py  product.py
apps/products/views/: ManageCoupon.py  categorymanage.py  create_productApi.py  product_api.py  product_manager.py  productapi.py  productmanager.py
apps/user/: admin.py  backend.py  forms.py  managers.py  middleware.py  models.py  serializers.py  tasks.py  tests.py
apps/user/migrations/: 0001_initial.py
apps/user/urls/: user.py
apps/user/views/: Profile.py  UserProfile.py  api.py  product_manager_profile.py  user_profile.py
config/: celery.py  settings.py  urls.py
templates/Coupons/: Update_Coupon.html  create_coupon.html  manage_coupons.html
templates/base/: base.html  head.html  navbar.html
templates/products/: CreateProduct.html  category.html  category_manage.html  create_category.html  product.html  product_manager.html  product_update_form.html  show_product.html  update_category.html
templates/user/: address_update.html  login.html  product_manager_dashboard.html  signup.html  update_user_info.html  user_profile.html
utils/: cachepy.py  filename.py  mail.py
